feat: se agrega la estimación a la hu

--- a/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
+++ b/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
@@ -1,6 +1,6 @@
 # Historia #825041: Habilitar creación de beneficiarios "Dummy" por carga masiva en Vida Grupo
 
-**Estado:** Analizado (Arquitecto)
+**Estado:** Estimado (Developer)
 
 ---
 
@@ -191,6 +191,282 @@ Permitir la creación de beneficiarios sin número de identificación (Dummy) de
 |-------|---------|-------------|-------|
 | 2025-12-18 | 1.0 | Historia creada e importada por PO con mejoras de claridad y completitud | esteban.colorado (PO) |
 | 2025-12-22 | 1.1 | Análisis arquitectónico completado con decisión de refactorización integral del flujo | esteban.colorado (Arquitecto) |
+| 2025-12-23 | 1.2 | Refinamiento técnico completado con descomposición en tareas y estrategia de testing | esteban.colorado (Developer) |
+
+---
+
+## Refinamiento Técnico (Developer)
+
+### Consideraciones Generales
+
+**Basado en análisis arquitectónico:**
+El arquitecto identificó 9 hitos de implementación con patrón Strategy + Factory para creación de contactos. La implementación reutiliza `ContactUtil.createNewContactDummy()` existente y extiende `CommonTransformer` para soportar PersonDummy_Ext y CompanyDummy_Ext. El flujo de carga masiva (2 fases: Azure + PolicyCenter) permanece intacto, solo se agrega lógica de decisión en Fase 2.
+
+**Nivel de complejidad:**
+**MEDIO-ALTO** - Refactorización con Strategy Pattern requiere diseño cuidadoso, pero reutiliza componentes existentes. La modificación de `regex.csv` es crítica y requiere validación exhaustiva. Limpieza de código deprecado reduce riesgo de regresión.
+
+**Riesgos técnicos conocidos:**
+- **CRÍTICO**: Modificación de `regex.csv` (4000+ caracteres en 1 línea) puede romper validaciones existentes de riesgos si no se prueba exhaustivamente
+- **ALTO**: Tests de regresión después de eliminar `TC_ADDITIONALINTEREST` deben cubrir TODOS los tipos de carga masiva
+- **MEDIO**: Determinación automática Persona vs Compañía basada en apellidos puede causar errores si usuario ingresa nombre de compañía con apellido
+- **BAJO**: Strategy Pattern agrega indirección que puede dificultar debugging inicial
+
+**Patrones y convenciones del equipo:**
+- **Gosu**: Código en inglés, comentarios en español, sin strings literales (usar constantes), indentación 2 espacios, sin punto y coma
+- **Nomenclatura**: PascalCase para clases, camelCase para métodos/variables, UPPER_SNAKE_CASE para constantes
+- **Enhancement**: Todas las extensiones nuevas fuera del paquete `sura` deben terminar en `_Ext`
+- **Tests**: Directorio `gtest/`, extender de `EESuraTestBase`, usar `@RunLevel(NONE)`, patrón AAA obligatorio, `Mockito.spy()` para clase bajo prueba
+- **Validaciones**: Comparar sobre constantes (evitar NPE), validar nulos antes de acceder propiedades
+- **Archivos**: Sin líneas vacías al inicio/final, sin código comentado
+
+**Dependencias nuevas a instalar:**
+Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito, Guidewire TestBase, ContactUtil, CommonTransformer, IContactPlugin).
+
+**Estrategia de testing:**
+**Framework**: GUnit (JUnit modificado de Guidewire) con Mockito para mocking | **Tipos**: Tests unitarios exclusivamente (Guidewire no permite tests de integración/E2E) | **Cobertura**: >70% (umbral mínimo Guidewire) | **Test Data Builders**: Reutilizar builders existentes en `EESuraTestBase` (`createGetPolicyLinePropertyAccessor`, `createGroupLifeLine`)
+
+### Historias Relacionadas Consultadas
+
+**Implementaciones similares analizadas:**
+- Historia #915240 (Bug - Organizar campos errados detalle de cobro): Patrón de validación de integridad de datos en reportes masivos, manejo de archivos de errores
+- Historia #830317 (Ajustar comportamiento descarga detalle cobro): Manejo de archivos de errores y notificaciones a usuario en procesos masivos
+- `DefaultBeneficiaryTransformerEESuraTestBase.gs`: Tests unitarios existentes de transformadores con mocking de `IContactPlugin` y `CommonTransformer`
+- `AddlInterestDetailEnhancementTest.gs`: Tests unitarios de enhancements con `mockStatic` y `verifyStaticPropertyGet`
+
+**Patrones de código reutilizados:**
+- **Strategy Pattern**: Usado en transformadores masivos (`TransformerFactoryProducer`, `OperationValidationFactory`)
+- **Factory Pattern**: Usado para selección de transformadores por tipo de archivo
+- **DTO Pattern**: Usado en `CommonTransformer` para mapeo entre entidades y DTOs
+- **mockStatic obligatorio**: Para enhancements y clases con métodos estáticos (`ContactUtil.createNewContactDummy()`)
+- **Spy Pattern**: `Mockito.spy()` obligatorio para clase bajo prueba (evita problemas de ClassLoader)
+
+**Mejores prácticas aplicadas:**
+- Reutilización de `ContactUtil.createNewContactDummy()` en lugar de duplicar lógica
+- Encapsulación de responsabilidades (Factory decide, Strategy ejecuta)
+- Tests unitarios con patrón AAA, mocking apropiado de dependencias externas
+- Validación de integridad en Fase 2 (PolicyCenter) en lugar de Fase 1 (Azure) - Separación de responsabilidades
+- Limpieza de código deprecado antes de agregar nueva funcionalidad - Reduce deuda técnica
+
+---
+
+## Tareas de Implementación (Developer)
+
+### Fase 0: Infraestructura y Migraciones
+
+#### Cambios de Configuración
+
+- [ ] **Modificar validaciones de Azure Data Factory**
+  - [ ] Modificar archivo `VidaGrupoIAC/modules/datafactory/controlSchema/Beneficiaries/regex.csv`
+  - [ ] Hacer opcional `TIPO_DOCUMENTO_BENEFICIARIO_X` agregando `|(^$)` al final de cada regex
+  - [ ] Hacer opcional `NUM_DOCUMENTO_BENEFICIARIO_X` agregando `?` al cuantificador
+  - [ ] Ejecutar validación con dataset de prueba (50+ variaciones CSV: vacíos, parciales, completos)
+  - [ ] Actualizar documentación de plantilla si es necesario
+
+---
+
+### Fase 1: Limpieza de Código Deprecado (Basado en Hito #2 del Arquitecto)
+
+#### 📦 PolicyCenter - Limpieza Transformadores
+
+- [ ] **Eliminar referencia deprecada TC_ADDITIONALINTEREST** (AC: N/A - Limpieza técnica)
+  - [ ] Eliminar línea 9 en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/factories/TransformerFactoryProducer.gs`
+  - [ ] Modificar: `case typekey.MassiveLoadFileType.TC_ADDITIONALINTEREST.Code : return new BeneficiaryTransformerFactory()` → ELIMINAR caso completo
+
+- [ ] **Eliminar validación duplicada en OperationValidationFactory** (AC: N/A - Limpieza técnica)
+  - [ ] Eliminar líneas 20-22 en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/validations/factories/OperationValidationFactory.gs`
+  - [ ] Modificar: Condición especial `if(message.FileType == typekey.MassiveLoadFileType.TC_ADDITIONALINTEREST)` → ELIMINAR bloque completo
+
+- [ ] **Simplificar método getOperationValidation en EnrichmentProcessing** (AC: N/A - Limpieza técnica)
+  - [ ] Eliminar método `getOperationValidation()` completo (líneas 166-172) en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/batch/enrichment/EnrichmentProcessing.gs`
+  - [ ] Reemplazar llamada a `getOperationValidation()` por llamada directa a `getOperationValidationFactory().createOperationValidatorInstance()`
+  - [ ] Test unitario: Verificar que validaciones de beneficiarios funcionan igual después del cambio
+
+---
+
+### Fase 2: Implementación de Strategy Pattern (Basado en Hitos #3-#6 del Arquitecto)
+
+#### 📦 PolicyCenter - Interfaces y Contratos
+
+- [ ] **Crear interface ContactCreationStrategy** (AC: 1, 2, 3 - Base para decisión de creación)
+  - [ ] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/ContactCreationStrategy.gs`
+  - [ ] Definir método: `function createContact(requestDTO : MassiveUploadMessageDTO, number : String, commonTransformer : CommonTransformer) : Contact`
+  - [ ] Definir método: `function supportsType(documentType : String, documentNumber : String) : boolean`
+  - [ ] Documentar contrato con comentarios en español
+
+#### 📦 PolicyCenter - Implementación de Estrategias
+
+- [ ] **Implementar DummyContactCreationStrategy** (AC: 1, 6 - Creación de contactos Dummy)
+  - [ ] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/DummyContactCreationStrategy.gs`
+  - [ ] Implementar `supportsType()`: retornar `true` si ambos campos vacíos
+  - [ ] Implementar `createContact()`:
+    - Determinar tipo (Persona vs Compañía) basándose en presencia de apellidos en CSV
+    - Llamar a `ContactUtil.createNewContactDummy()` reutilizando flujo uno-a-uno
+    - Poblar datos desde CSV (nombre, apellidos si aplica)
+    - Asignar dirección dummy estándar usando `ContactUtil.updateAddressDummy()`
+  - [ ] Test unitario en `gtest/sura/pc/massiveupload/strategy/DummyContactCreationStrategyTest.gs`:
+    - Test: `testSupportsTypeMustReturnTrueWhenBothFieldsEmpty`
+    - Test: `testSupportsTypeMustReturnFalseWhenAnyFieldHasValue`
+    - Test: `testCreateContactMustReturnPersonDummyWhenLastNameExists`
+    - Test: `testCreateContactMustReturnCompanyDummyWhenLastNameEmpty`
+    - Test: `testCreateContactMustReuseContactUtilMethods`
+    - Mock: `mockStatic(ContactUtil, {ContactUtil#createNewContactDummy(), ContactUtil#updateAddressDummy()})`
+
+- [ ] **Implementar CompleteContactCreationStrategy** (AC: 3 - Creación de contactos completos)
+  - [ ] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/CompleteContactCreationStrategy.gs`
+  - [ ] Implementar `supportsType()`: retornar `true` si ambos campos tienen valor
+  - [ ] Implementar `createContact()`:
+    - Buscar contacto existente con `IContactPlugin.searchContact()`
+    - Si no existe, crear nuevo contacto completo (comportamiento actual)
+    - Usar `CommonTransformer.contactToAdditionalInterest()` para mapeo a DTO
+  - [ ] Test unitario en `gtest/sura/pc/massiveupload/strategy/CompleteContactCreationStrategyTest.gs`:
+    - Test: `testSupportsTypeMustReturnTrueWhenBothFieldsHaveValue`
+    - Test: `testSupportsTypeMustReturnFalseWhenAnyFieldEmpty`
+    - Test: `testCreateContactMustSearchExistingContact`
+    - Test: `testCreateContactMustCreateNewWhenNotFound`
+    - Mock: `_iContactPlugin`, `_commonTransformer`
+
+#### 📦 PolicyCenter - Factory de Estrategias
+
+- [ ] **Implementar ContactCreationStrategyFactory** (AC: 1, 2, 3 - Decisión automática según tabla)
+  - [ ] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/ContactCreationStrategyFactory.gs`
+  - [ ] Implementar `getStrategy()`:
+    - Validar tabla de decisión de 4 escenarios:
+      - Vacío/Vacío → `DummyContactCreationStrategy`
+      - Lleno/Lleno → `CompleteContactCreationStrategy`
+      - Vacío/Lleno O Lleno/Vacío → `ValidationException` con mensaje claro
+    - Retornar estrategia apropiada
+  - [ ] Declarar constantes para mensajes de error (sin strings literales)
+  - [ ] Test unitario en `gtest/sura/pc/massiveupload/strategy/ContactCreationStrategyFactoryTest.gs`:
+    - Test: `testGetStrategyMustReturnDummyWhenBothFieldsEmpty`
+    - Test: `testGetStrategyMustReturnCompleteWhenBothFieldsFilled`
+    - Test: `testGetStrategyMustThrowExceptionWhenOnlyTypeEmpty`
+    - Test: `testGetStrategyMustThrowExceptionWhenOnlyNumberEmpty`
+
+---
+
+### Fase 3: Refactorización de Transformadores (Basado en Hito #7 del Arquitecto)
+
+#### 📦 PolicyCenter - Refactorización Transformador de Beneficiarios
+
+- [ ] **Refactorizar DefaultBeneficiaryTransformer.createInterestContingent()** (AC: 1, 2, 3 - Integración de estrategias)
+  - [ ] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/DefaultBeneficiaryTransformer.gs`
+  - [ ] Simplificar método `createInterestContingent()` (líneas 85-95):
+    - Eliminar búsqueda directa de contacto inline
+    - Reemplazar con: `var strategy = ContactCreationStrategyFactory.getStrategy(documentType, documentNumber, _iContactPlugin)`
+    - Crear contacto con: `var contact = strategy.createContact(requestDTO, number, _commonTransformer)`
+    - Mantener lógica posterior intacta (mapeo a DTO, asignación de parentesco, etc.)
+  - [ ] Reducción esperada: ~30 líneas a ~5 líneas usando factory
+  - [ ] Test unitario en `gtest/sura/pc/massiveupload/transformer/DefaultBeneficiaryTransformerTest.gs`:
+    - Test: `testCreateInterestContingentMustUseDummyStrategyWhenFieldsEmpty`
+    - Test: `testCreateInterestContingentMustUseCompleteStrategyWhenFieldsFilled`
+    - Test: `testCreateInterestContingentMustPropagateValidationException`
+    - Mock: `mockStatic(ContactCreationStrategyFactory, {ContactCreationStrategyFactory#getStrategy()})`
+    - Spy: `_defaultBeneficiaryTransformer = Mockito.spy(new DefaultBeneficiaryTransformer(_commonTransformer, _iContactPlugin))`
+
+---
+
+### Fase 4: Extensión de CommonTransformer (Basado en Hito #8 del Arquitecto)
+
+#### 📦 PolicyCenter - Soporte para Contactos Dummy
+
+- [ ] **Extender CommonTransformer.contactToAdditionalInterest()** (AC: 1, 6 - Mapeo de Dummy a DTO)
+  - [ ] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/common/CommonTransformer.gs`
+  - [ ] Agregar type checking al inicio del método `contactToAdditionalInterest()` (líneas 350-375):
+    - Agregar: `if (contact typeis PersonDummy_Ext) { return setPersonDummyAdditionalInterestData(contact, requestDTO, number) }`
+    - Agregar: `if (contact typeis CompanyDummy_Ext) { return setCompanyDummyAdditionalInterestData(contact, requestDTO, number) }`
+  - [ ] Crear método `setPersonDummyAdditionalInterestData()`:
+    - Mapear `PersonDummy_Ext` a `PersonExtDTO`
+    - Asignar tipo de documento "DummyPerson" (typekey)
+    - Poblar datos de contacto (nombre, apellidos)
+    - Retornar `AdditionalInterestDTO` completo
+  - [ ] Crear método `setCompanyDummyAdditionalInterestData()`:
+    - Mapear `CompanyDummy_Ext` a `CompanyExtDTO`
+    - Asignar tipo de documento "DummyCompany" (typekey)
+    - Poblar datos de contacto (nombre compañía)
+    - Retornar `AdditionalInterestDTO` completo
+  - [ ] Test unitario en `gtest/sura/pc/massiveupload/transformer/common/CommonTransformerTest.gs`:
+    - Test: `testContactToAdditionalInterestMustMapPersonDummy`
+    - Test: `testContactToAdditionalInterestMustMapCompanyDummy`
+    - Test: `testContactToAdditionalInterestMustPreserveStandardBehaviorForRegularContacts` (Regresión)
+    - Mock: `_bundle.newBeanInstance(PersonDummy_Ext)`, `_bundle.newBeanInstance(CompanyDummy_Ext)`
+
+---
+
+### Fase 5: Validación y Tests de Integración Manuales
+
+#### 📦 Validación de Negocio
+
+- [ ] **Crear dataset de prueba exhaustivo** (AC: 1, 2, 3, 4, 5)
+  - [ ] Crear archivo CSV con 50+ escenarios:
+    - 10 registros con campos vacíos (Dummy Persona y Compañía)
+    - 10 registros con campos completos (Contactos estándar)
+    - 5 registros con campo tipo vacío + número lleno (Error Fase 2)
+    - 5 registros con campo tipo lleno + número vacío (Error Fase 2)
+    - 10 registros con reemplazo de beneficiarios existentes
+    - 10 registros con asegurados sin beneficiarios previos
+  - [ ] Ejecutar carga masiva en ambiente DEV
+  - [ ] Validar ErrorFase1 y ErrorFase2 contienen errores esperados con mensajes claros
+  - [ ] Validar beneficiarios Dummy creados correctamente en base de datos
+  - [ ] Validar beneficiarios completos creados correctamente (regresión)
+  - [ ] Validar reemplazo total de beneficiarios funciona (no fusión)
+
+- [ ] **Validación de visualización en UI** (AC: 6)
+  - [ ] Acceder a póliza master en PolicyCenter
+  - [ ] Consultar riesgo con beneficiarios Dummy creados
+  - [ ] Verificar que se muestra tipo "Dummy Persona" o "Dummy Compañía"
+  - [ ] Verificar que datos (nombre, apellidos) se visualizan correctamente
+  - [ ] Verificar que beneficiarios estándar se siguen mostrando igual (regresión)
+
+---
+
+### Fase 6: QA y Deployment
+
+#### 📦 Code Quality
+
+- [ ] **Ejecutar Agente Peer Review** (MANUAL)
+  - Revisar cumplimiento de estándares de código Sura
+  - Validar nomenclatura, formato, strings en constantes
+  - Verificar tests unitarios con cobertura >70%
+
+- [ ] **Resolver incidentes del Peer Review** (MANUAL - Condicional)
+  - Aplicar correcciones sugeridas por peer reviewer
+  - Re-ejecutar tests unitarios
+  - Validar cobertura de código
+
+#### 📦 Deployment DEV
+
+- [ ] **Crear Pull Request** (MANUAL)
+  - Incluir descripción detallada de cambios
+  - Listar archivos modificados/creados
+  - Vincular a historia #825041
+
+- [ ] **Ejecutar pipeline deployment DEV** (MANUAL)
+  - Deployar cambios de Azure (regex.csv)
+  - Deployar cambios de PolicyCenter (código Gosu)
+  - Validar que no hay errores de compilación
+  - Ejecutar suite de tests unitarios en pipeline
+
+#### 📦 Testing Manual
+
+- [ ] **Diseñar set de pruebas manuales** (MANUAL)
+  - Crear casos de prueba para cada criterio de aceptación (1-6)
+  - Definir datos de entrada y resultados esperados
+  - Incluir pruebas de regresión (cargas de riesgos, beneficiarios estándar)
+
+- [ ] **Ejecutar pruebas manuales** (MANUAL)
+  - Ejecutar todos los casos de prueba en ambiente DEV
+  - Documentar resultados (exitosos y fallidos)
+  - Reportar defectos encontrados si aplica
+  - Validar que todos los criterios de aceptación se cumplen
+
+---
+
+**Notas sobre vinculación con Criterios de Aceptación:**
+- Fase 0: Habilita el flujo completo (sin este cambio, registros con campos vacíos nunca llegan a Fase 2)
+- Fase 1: Limpieza técnica sin impacto directo en AC, pero reduce deuda técnica y riesgo de regresión
+- Fase 2-4: Implementan AC 1, 2, 3 (creación automática según tabla de decisión)
+- Fase 5: Valida AC 1, 2, 3, 4, 5, 6 (todos los escenarios de negocio)
+- Fase 6: Asegura calidad y deployment correcto (no vinculado a AC específicos)
 
 ---
 
@@ -477,5 +753,124 @@ Componentes downstream (afectados por esta historia):
 **Tiempo con Método Ceiba:** 12 minutos  
 **Tiempo estimado tradicional:** 30 minutos  
 **Optimización:** 60%
+
+---
+
+## Estimación
+
+**Estimador:** esteban.colorado  
+**Fecha:** 2025-12-23
+
+### Estimación por Tareas
+
+#### Tareas Aumentadas por IA (Impactadas por Método Ceiba)
+
+**Leyenda:** MC = Método Ceiba
+
+| # | Tarea | Complejidad | Junior | Semi Sr | Senior | MC Jr | MC Semi Sr | MC Sr |
+|---|-------|-------------|--------|---------|--------|-------|------------|-------|
+| 1 | Modificar validaciones de Azure Data Factory | ALTO | 10.8h | 6.9h | 4.3h | 4.3h | 2.7h | **1.7h** |
+| 2 | Eliminar referencia TC_ADDITIONALINTEREST | BAJO | 1.7h | 1.3h | 1.1h | 0.7h | 0.4h | **0.4h** |
+| 3 | Eliminar validación duplicada OperationValidationFactory | BAJO | 1.5h | 1.2h | 1.0h | 0.6h | 0.4h | **0.4h** |
+| 4 | Simplificar método getOperationValidation | MEDIO | 4.3h | 2.7h | 1.7h | 1.7h | 1.1h | **0.7h** |
+| 5 | Crear interface ContactCreationStrategy | BAJO | 1.7h | 1.3h | 1.1h | 0.7h | 0.4h | **0.4h** |
+| 6 | Implementar DummyContactCreationStrategy + Tests | MEDIO | 10.0h | 6.4h | 4.0h | 4.0h | 2.6h | **1.6h** |
+| 7 | Implementar CompleteContactCreationStrategy + Tests | MEDIO | 8.0h | 5.1h | 3.2h | 3.2h | 2.0h | **1.3h** |
+| 8 | Implementar ContactCreationStrategyFactory + Tests | MEDIO | 7.8h | 5.0h | 3.1h | 3.1h | 2.0h | **1.2h** |
+| 9 | Refactorizar DefaultBeneficiaryTransformer.createInterestContingent() | MEDIO | 8.0h | 5.1h | 3.2h | 3.2h | 2.0h | **1.3h** |
+| 10 | Extender CommonTransformer.contactToAdditionalInterest() | MEDIO | 9.5h | 6.1h | 3.8h | 3.8h | 2.4h | **1.5h** |
+
+#### Tareas Manuales (No Impactadas por Método Ceiba)
+
+Estas tareas requieren intervención humana directa y no se benefician de la optimización por IA.
+
+| # | Tarea | Tiempo Estimado | Fuente |
+|---|-------|-----------------|--------|
+| 11 | Crear dataset de prueba exhaustivo (50+ escenarios CSV) | 3.2h | estimacion |
+| 12 | Validación de visualización en UI | 1.1h | estimacion |
+| 13 | Ejecutar Agente Peer Review | 1.7h | estimacion |
+| 14 | Resolver incidentes del Peer Review (Condicional) | 2.2h | estimacion |
+| 15 | Crear Pull Request | 0.5h | estimacion |
+| 16 | Ejecutar pipeline deployment DEV | 1.1h | estimacion |
+| 17 | Diseñar set de pruebas manuales | 2.0h | estimacion |
+| 18 | Ejecutar pruebas manuales | 4.0h | estimacion |
+
+**Total Tareas Manuales:** 15.8h
+
+**Leyenda fuentes:**
+- `pivote-dod`: Tiempo obtenido de tabla de Definition of Done preconfigurada
+- `estimacion`: Tiempo calculado usando método PERT
+
+### Totales Comparativos por Rol
+
+#### 📊 Estimación Completa: Tradicional vs Método Ceiba
+
+**Conversión:** 1 punto = 1 día laboral = 9 horas
+
+| Perfil | Desarrollo Tradicional (SIN IA) | Desarrollo con Método Ceiba (CON IA) | Ahorro de Tiempo |
+|--------|----------------------------------|--------------------------------------|------------------|
+| **Junior** | **79.1h** (8.8 puntos) | **42.1h** (4.7 puntos) | **37.0h** (4.1 puntos) - **47% menos** |
+| **Semi Senior** | **57.9h** (6.4 puntos) | **31.8h** (3.5 puntos) | **26.1h** (2.9 puntos) - **45% menos** |
+| **Senior** | **42.3h** (4.7 puntos) | **26.3h** (2.9 puntos) | **16.0h** (1.8 puntos) - **38% menos** |
+
+#### 📌 Desglose por Componente
+
+##### Desarrollo Tradicional (SIN IA - Sin asistencia de herramientas de IA)
+
+| Perfil | Tareas de Código | Tareas Manuales | Total | Puntos |
+|--------|------------------|-----------------|-------|--------|
+| Junior | 63.3h | 15.8h | 79.1h | 8.8 puntos |
+| Semi Senior | 42.1h | 15.8h | 57.9h | 6.4 puntos |
+| **Senior** | **26.5h** | **15.8h** | **42.3h** | **4.7 puntos** |
+
+##### Desarrollo con Método Ceiba (CON IA - Optimizado con herramientas de IA)
+
+| Perfil | Tareas de Código (MC) | Tareas Manuales | Total | Puntos |
+|--------|-----------------------|-----------------|-------|--------|
+| Junior | 26.3h | 15.8h | 42.1h | 4.7 puntos |
+| Semi Senior | 16.0h | 15.8h | 31.8h | 3.5 puntos |
+| **Senior** | **10.5h** | **15.8h** | **26.3h** | **2.9 puntos** |
+
+**Optimización en Tareas de Código:**
+- Método Ceiba reduce el tiempo de desarrollo de código en **60%** aplicando descuento de IA sobre estimación tradicional
+- Las tareas manuales (15.8h) no se benefician de IA y permanecen constantes en ambos escenarios
+
+#### 🎯 Recomendación de Asignación para Sprint Planning
+
+**Escenario SIN Método Ceiba (Tradicional):**
+- Senior: **5 puntos**
+- Semi Senior: **6-7 puntos**
+- Junior: **9 puntos**
+
+**Escenario CON Método Ceiba (Recomendado):**
+- **Senior: 3 puntos** ⭐ (redondeado desde 2.9)
+- Semi Senior: **4 puntos** (redondeado desde 3.5)
+- Junior: **5 puntos** (redondeado desde 4.7)
+
+### Notas Adicionales
+
+**Supuestos de Estimación:**
+- Desarrollador tiene experiencia previa con Guidewire PolicyCenter y Gosu
+- Ambiente de desarrollo está configurado y funcional
+- Acceso a Azure Data Factory para modificar regex.csv está disponible
+- No hay cambios en requisitos durante la implementación
+
+**Riesgos Identificados:**
+- **CRÍTICO (4.3h de riesgo):** Modificación de regex.csv puede romper validaciones existentes - requiere dataset exhaustivo de prueba
+- **ALTO (2h de riesgo):** Tests de regresión después de eliminar TC_ADDITIONALINTEREST deben cubrir todos los tipos de carga
+- **MEDIO (1.5h de riesgo):** Determinación automática Persona vs Compañía puede causar errores si usuario ingresa nombre incorrecto
+
+**Tareas con Alta Incertidumbre (Riesgo > 3h):**
+- Tarea 1: Modificar validaciones de Azure Data Factory (Riesgo: 6h - CRÍTICO)
+- Tarea 6: Implementar DummyContactCreationStrategy + Tests (Riesgo: 4h)
+
+**Recomendaciones:**
+- Considerar spike técnico para validación de regex.csv antes de implementación
+- Ejecutar tests de regresión completos después de Fase 1 (limpieza código deprecado)
+- Validar dataset de prueba con expedidores reales antes de deployment a producción
+
+---
+
+*Estimación generada usando workflow estimar-historia-usuario del Método Ceiba.*
 
 ---
