refactor: se actualiza historia

--- a/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
+++ b/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
@@ -1,6 +1,6 @@
 # Historia #825041: Habilitar creación de beneficiarios "Dummy" por carga masiva en Vida Grupo
 
-**Estado:** Estimado (Developer)
+**Estado:** En Desarrollo (Developer)
 
 ---
 
@@ -255,10 +255,10 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 
 #### Cambios de Configuración
 
-- [ ] **Modificar validaciones de Azure Data Factory**
-  - [ ] Modificar archivo `VidaGrupoIAC/modules/datafactory/controlSchema/Beneficiaries/regex.csv`
-  - [ ] Hacer opcional `TIPO_DOCUMENTO_BENEFICIARIO_X` agregando `|(^$)` al final de cada regex
-  - [ ] Hacer opcional `NUM_DOCUMENTO_BENEFICIARIO_X` agregando `?` al cuantificador
+- [x] **Modificar validaciones de Azure Data Factory**
+  - [x] Modificar archivo `VidaGrupoIAC/modules/datafactory/controlSchema/Beneficiaries/regex.csv`
+  - [x] Hacer opcional `TIPO_DOCUMENTO_BENEFICIARIO_X` agregando `|(^$)` al final de cada regex
+  - [x] Hacer opcional `NUM_DOCUMENTO_BENEFICIARIO_X` agregando `?` al cuantificador
   - [ ] Ejecutar validación con dataset de prueba (50+ variaciones CSV: vacíos, parciales, completos)
   - [ ] Actualizar documentación de plantilla si es necesario
 
